Documentação Swagger Classe Estoque
